--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.8.3",
+		"@sindresorhus/tsconfig": "^6.0.0",
 		"@types/bun": "latest"
 	},
 	"peerDependencies": {
