--- a/package.json
+++ b/package.json
@@ -1,15 +1,33 @@
 {
 	"name": "spawncamp",
-	"module": "index.ts",
+	"description": "A tiny library for userscripts to wait for elements to arrive in the DOM",
+	"version": "0.0.1",
 	"type": "module",
+	"module": "index.ts",
+	"license": "MIT",
+	"repository": "https://github.com/vaaski/spawncamp",
+	"homepage": "https://github.com/vaaski/spawncamp",
+	"author": {
+		"name": "vaaski",
+		"email": "admin@vaa.ski",
+		"url": "https://vaaski.dev"
+	},
 	"scripts": {
 		"format": "biome format --write",
-		"lint": "biome lint --write"
+		"lint": "biome lint --write",
+		"build": "bun run build.ts",
+		"prepublishOnly": "bun run build.ts"
+	},
+	"files": ["dist"],
+	"exports": {
+		"types": "./dist/index.d.ts",
+		"default": "./dist/index.js"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.8.3",
 		"@sindresorhus/tsconfig": "^6.0.0",
-		"@types/bun": "latest"
+		"@types/bun": "latest",
+		"bun-plugin-dts": "^0.2.3"
 	},
 	"peerDependencies": {
 		"typescript": "^5.0.0"
