--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 		"format": "biome format --write",
 		"lint": "biome lint --write",
 		"build": "bun run build.ts",
-		"prepublishOnly": "bun run build.ts"
+		"prepublishOnly": "bun run build.ts",
+		"test": "bun test"
 	},
 	"files": ["dist"],
 	"exports": {
@@ -25,6 +26,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.8.3",
+		"@happy-dom/global-registrator": "^15.7.3",
 		"@sindresorhus/tsconfig": "^6.0.0",
 		"@types/bun": "latest",
 		"bun-plugin-dts": "^0.2.3"
