--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "spawncamp",
 	"description": "A tiny library for userscripts that waits for elements to arrive in the DOM",
-	"version": "0.0.1",
+	"version": "0.1.0",
 	"type": "module",
 	"module": "index.ts",
 	"license": "MIT",
@@ -19,7 +19,9 @@
 		"prepublishOnly": "bun run build.ts",
 		"test": "bun test"
 	},
-	"files": ["dist"],
+	"files": [
+		"dist"
+	],
 	"exports": {
 		"types": "./dist/index.d.ts",
 		"default": "./dist/index.js"
